[project]
name = "atcoder"
version = "0.1.0"
description = "Atcoder project"
dependencies = [
    "markupsafe==2.0.1",
    "atcoder-tools>=2.14.0",
    "online-judge-tools>=11.5.1",
    "setuptools>=71.1.0",
    "numpy>=2.1.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
